tests/should_fail/match_duplicate_bool_arm.nv
// should_fail: Duplicate bool literal arms in value match
module match_duplicate_bool_arm
let b = true
match b {
    true => println("yes"),
    true => println("yes again"),
    false => println("no")
}
